[tool.poetry]
name = "rl"
version = "0.1.2"
description = ""
authors = ["Adrián Tormos Llorente <adriantormos98@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "^1.12.1"
gym = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
